--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>HTML Home Page</title>
+    <title>HTML Updated Home Page</title>
   </head>
   <body>
-    <h1>This is the home page in OpenShift</h1>
+    <h1>This is the updated home page in OpenShift</h1>
   </body>
 </html>
